--- a/QuantumMechanics/black_body_radiation.ipynb
+++ b/QuantumMechanics/black_body_radiation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5145b09f",
+   "id": "fb83dba3",
    "metadata": {},
    "source": [
-    "# Black-body Radiation"
+    "# [Black-body Radiation](https://study-astrophysics.com/black-body-radiation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d6e1b1c",
+   "id": "eada9812",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae11428",
+   "id": "b81f4020",
    "metadata": {},
    "source": [
     "## Black-body Radiation\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27fcfc25",
+   "id": "f9c0f5a1",
    "metadata": {},
    "source": [
     "---"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee79c134",
+   "id": "2139eafc",
    "metadata": {},
    "source": [
     "## Most Probable Occupation Number for Photon\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f000c2",
+   "id": "3927b891",
    "metadata": {},
    "source": [
     "---"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ceb392",
+   "id": "f44dc49e",
    "metadata": {},
    "source": [
     "## Energy Density in the frequency range $d \\omega$\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d1aa75",
+   "id": "4e58f2ab",
    "metadata": {},
    "source": [
     "---"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e05b946",
+   "id": "6e840d37",
    "metadata": {},
    "source": [
     "## Total Energy Density\n",
