--- a/QuantumMechanics/magnetic_moment_qm.ipynb
+++ b/QuantumMechanics/magnetic_moment_qm.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd51a01c",
+   "id": "897c9aa2",
    "metadata": {},
    "source": [
-    "# Magnetic Moment in Quantum Mechanics"
+    "# [Magnetic Moment in Quantum Mechanics](https://study-astrophysics.com/magnetic-moment-qm/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6eb603e1",
+   "id": "090f2553",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd594cf",
+   "id": "d504eb92",
    "metadata": {},
    "source": [
     "## Magnetic Dipole Moment for an Electron in a Magnetic Field\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af4cb0b",
+   "id": "dfec0642",
    "metadata": {},
    "source": [
     "---"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7acfaaa",
+   "id": "5dbefca9",
    "metadata": {},
    "source": [
     "## Hamiltonian for this System\n",
