--- a/QuantumMechanics/pauli_matrices.ipynb
+++ b/QuantumMechanics/pauli_matrices.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49d2d347",
+   "id": "62fa7f30",
    "metadata": {},
    "source": [
-    "# Pauli Matrices"
+    "# [Pauli Matrices](https://study-astrophysics.com/pauli-matrices/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd1864c2",
+   "id": "bf23b406",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137c26d2",
+   "id": "48baaa09",
    "metadata": {},
    "source": [
     "## Pauli Spin Matrices\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fb5a628",
+   "id": "a4974b0b",
    "metadata": {},
    "source": [
     "---"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b664612",
+   "id": "58e68edd",
    "metadata": {},
    "source": [
     "## Eigenspinors of $\\hat{S}_x$ in this basis,\n",
