--- a/QuantumMechanics/plancks_law.ipynb
+++ b/QuantumMechanics/plancks_law.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f9eab61",
+   "id": "a568a2c3",
    "metadata": {},
    "source": [
-    "# Planck's Law"
+    "# [Planck's Law](https://study-astrophysics.com/plancks-law/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "90b59dfe",
+   "id": "3c4b100f",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd20c41",
+   "id": "665bc2f0",
    "metadata": {},
    "source": [
     "## Planck's Law\n",
