--- a/ParticlePhysics/hydrogen_atom.ipynb
+++ b/ParticlePhysics/hydrogen_atom.ipynb
@@ -70,6 +70,24 @@
     "\n",
     "- $E_1 = 13.6 \\text{ eV}$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7813d0c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76ab9553",
+   "metadata": {},
+   "source": [
+    "## Bohr Radius\n",
+    "\n",
+    "$$ \\large a_0 \\ = \\ \\frac{4 \\pi \\epsilon_0 \\hbar^2}{m_e e^2} \\ = \\ 0.529\\times 10^{-10} \\text{ m}$$"
+   ]
   }
  ],
  "metadata": {
