--- a/ParticlePhysics/ground_state_wavefunction.ipynb
+++ b/ParticlePhysics/ground_state_wavefunction.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "19f55b0b",
+   "id": "0cc813dd",
    "metadata": {},
    "source": [
-    "# Ground-state Wavefunction"
+    "# [Ground-state Wavefunction](https://study-astrophysics.com/ground-state-wavefunction/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b70aa504",
+   "id": "524795d6",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec34a078",
+   "id": "f4f42b21",
    "metadata": {},
    "source": [
     "## Ground-state Wavefunction\n",
