--- a/ParticlePhysics/hydrogen_atom.ipynb
+++ b/ParticlePhysics/hydrogen_atom.ipynb
@@ -5,7 +5,7 @@
    "id": "6960d48d",
    "metadata": {},
    "source": [
-    "# Hydrogen Atom"
+    "# [Hydrogen Atom](https://study-astrophysics.com/hydrogen-atom/)"
    ]
   },
   {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7813d0c",
+   "id": "76a699cf",
    "metadata": {},
    "source": [
     "---"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76ab9553",
+   "id": "7b6e722d",
    "metadata": {},
    "source": [
     "## Bohr Radius\n",
