--- a/ParticlePhysics/hydrogen_like_atom.ipynb
+++ b/ParticlePhysics/hydrogen_like_atom.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d9e4d73",
+   "id": "991a1e33",
    "metadata": {},
    "source": [
-    "# Hydrogen-like Atom"
+    "# [Hydrogen-like Atom](https://study-astrophysics.com/hydrogen-like-atom/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0a608afa",
+   "id": "87a9b258",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3da3e5f",
+   "id": "3e3c1b36",
    "metadata": {},
    "source": [
     "## Hydrogen-like Atom\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d39fad",
+   "id": "c14a789c",
    "metadata": {},
    "source": [
     "---"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd60d939",
+   "id": "e4ecd99d",
    "metadata": {},
    "source": [
     "## Related Topics\n",
