--- a/ParticlePhysics/reduced_mass.ipynb
+++ b/ParticlePhysics/reduced_mass.ipynb
@@ -5,7 +5,7 @@
    "id": "1ca04f5a",
    "metadata": {},
    "source": [
-    "# Reduced Mass"
+    "# [Reduced Mass](https://study-astrophysics.com/reduced-mass/)"
    ]
   },
   {
