--- a/ParticlePhysics/rydberg_formula.ipynb
+++ b/ParticlePhysics/rydberg_formula.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6835feca",
+   "id": "2b031e73",
    "metadata": {},
    "source": [
-    "# Rydberg Formula"
+    "# [Rydberg Formula](https://study-astrophysics.com/rydberg-formula/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17d3f623",
+   "id": "8ad3f568",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d58b974",
+   "id": "42df0c64",
    "metadata": {},
    "source": [
     "## Rydberg Formula\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0709f4e2",
+   "id": "dd2ae4f4",
    "metadata": {},
    "source": [
     "---"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0144c85",
+   "id": "835ab2c5",
    "metadata": {},
    "source": [
     "## In terms of the wavelength of the photon,\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9aee97",
+   "id": "1c4a6b36",
    "metadata": {},
    "source": [
     "---"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed8db872",
+   "id": "caeef895",
    "metadata": {},
    "source": [
     "## Lyman ($n_f = 1$): UV\n",
