--- a/ParticlePhysics/hunds_rules.ipynb
+++ b/ParticlePhysics/hunds_rules.ipynb
@@ -22,15 +22,32 @@
    "metadata": {},
    "source": [
     "## Hund's Rules\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "### The term with maximum multiplicity (highest total spin) lies lowest in energy. \n",
+    "\n",
+    "\n",
+    "### For a given multiplicity, the term with the largest value of L lies lowest in energy.\n",
+    "\n",
+    "\n",
+    "### If a subshell is less than half-filled, the one with lowest $J$ is the ground state. If the subshell is more than half-filled, the one with the highest $J$ is the ground state.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4b9771ca",
+   "id": "83efc712",
    "metadata": {},
    "source": [
-    "https://en.wikipedia.org/wiki/Hund%27s_rules"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f87f6746",
+   "metadata": {},
+   "source": [
+    "### Related Problems"
    ]
   }
  ],
