add links, contents

--- a/ParticlePhysics/hunds_rules.ipynb
+++ b/ParticlePhysics/hunds_rules.ipynb
@@ -25,13 +25,13 @@
     "\n",
     "\n",
     "\n",
-    "### The term with maximum multiplicity (highest total spin) lies lowest in energy. \n",
+    "### 1. The term with maximum multiplicity (highest total spin) lies lowest in energy. \n",
     "\n",
     "\n",
-    "### For a given multiplicity, the term with the largest value of L lies lowest in energy.\n",
+    "### 2. For a given multiplicity, the term with the largest value of L lies lowest in energy.\n",
     "\n",
     "\n",
-    "### If a subshell is less than half-filled, the one with lowest $J$ is the ground state. If the subshell is more than half-filled, the one with the highest $J$ is the ground state.\n"
+    "### 3. If a subshell is less than half-filled, the one with lowest $J$ is the ground state. If the subshell is more than half-filled, the one with the highest $J$ is the ground state.\n"
    ]
   },
   {
