--- a/ParticlePhysics/hydrogen_atom.ipynb
+++ b/ParticlePhysics/hydrogen_atom.ipynb
@@ -88,6 +88,25 @@
     "\n",
     "$$ \\large a_0 \\ = \\ \\frac{4 \\pi \\epsilon_0 \\hbar^2}{m_e e^2} \\ = \\ 0.529\\times 10^{-10} \\text{ m}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5b0dc9",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1208401",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Hydrogen-like Atom](https://study-astrophysics.com/hydrogen-like-atom/)"
+   ]
   }
  ],
  "metadata": {
