--- a/ParticlePhysics/hydrogen_like_atom.ipynb
+++ b/ParticlePhysics/hydrogen_like_atom.ipynb
@@ -44,7 +44,7 @@
     "## Related Topics\n",
     "\n",
     "\n",
-    "### Hydrogen Atoms"
+    "### [Hydrogen Atom](https://study-astrophysics.com/hydrogen-atom/)"
    ]
   }
  ],
