--- a/ParticlePhysics/positronium.ipynb
+++ b/ParticlePhysics/positronium.ipynb
@@ -51,6 +51,25 @@
     "### Related Problems\n",
     "- GRE Physics GR1777 Problem [023](https://study-astrophysics.com/gr1777-023/)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31e5e43",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db263e24",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Reduced Mass](https://study-astrophysics.com/reduced-mass/)"
+   ]
   }
  ],
  "metadata": {
