--- a/ParticlePhysics/quantum_number.ipynb
+++ b/ParticlePhysics/quantum_number.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Principal Quantum Number $n$\n",
     "\n",
-    "The principal quantum number describes the electron shell, or energy level, of an electron."
+    "The principal quantum number describes the **electron shell, or energy level**, of an electron."
    ]
   },
   {
@@ -41,7 +41,7 @@
    "source": [
     "## Orbital Quantum Number $l$\n",
     "\n",
-    "The azimuthal quantum number, also known as the (angular momentum quantum number or orbital quantum number), describes the subshell, and gives the magnitude of the orbital angular momentum through the relation.\n",
+    "The azimuthal quantum number, also known as the (angular momentum quantum number or orbital quantum number), describes the **subshell**, and gives the magnitude of the orbital angular momentum through the relation.\n",
     "\n",
     "\n",
     "$$ \\large L^2 \\ = \\ \\hbar^2 l (l + 1) $$\n",
@@ -81,7 +81,7 @@
    "source": [
     "## Magnetic Quantum Number $m_l$\n",
     "\n",
-    "The magnetic quantum number describes the specific orbital (or \"cloud\") within that subshell, and yields the projection of the orbital angular momentum along a specified axis.\n",
+    "The magnetic quantum number describes the **specific orbital (or \"cloud\") within that subshell**, and yields the projection of the orbital angular momentum along a specified axis.\n",
     "\n",
     "\n",
     "$$ \\large L_z \\ = \\ m_l \\hbar $$\n",
@@ -109,7 +109,7 @@
     "## Spin Quantum Number $m_s$\n",
     "\n",
     "\n",
-    "The spin quantum number describes the intrinsic spin angular momentum of the electron within each orbital and gives the projection of the spin angular momentum $S$ along the specified axis.\n",
+    "The spin quantum number describes the **intrinsic spin angular momentum** of the electron within each orbital and gives the projection of the spin angular momentum $S$ along the specified axis.\n",
     "\n",
     "$$ \\large S_z \\ = \\ m_s \\hbar$$\n",
     "\n",
