--- a/ParticlePhysics/reduced_mass.ipynb
+++ b/ParticlePhysics/reduced_mass.ipynb
@@ -52,6 +52,25 @@
     "\n",
     "$$ \\large \\text{energy} \\propto \\text{reduced mass} $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f32d69e8",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf7cf3f1",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Positronium](https://study-astrophysics.com/positronium/)"
+   ]
   }
  ],
  "metadata": {
