--- a/ParticlePhysics/hunds_rules.ipynb
+++ b/ParticlePhysics/hunds_rules.ipynb
@@ -5,7 +5,7 @@
    "id": "38b2fa59",
    "metadata": {},
    "source": [
-    "# Hund's Rules"
+    "# [Hund's Rules](https://study-astrophysics.com/hunds-rules/)"
    ]
   },
   {
@@ -47,7 +47,16 @@
    "id": "f87f6746",
    "metadata": {},
    "source": [
-    "### Related Problems"
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Quantum Number](https://study-astrophysics.com/quantum-number/)\n",
+    "\n",
+    "\n",
+    "### [Atomic Orbital](https://study-astrophysics.com/atomic-orbital/)\n",
+    "\n",
+    "\n",
+    "### [Selection Rule](https://study-astrophysics.com/selection-rule/)"
    ]
   }
  ],
