--- a/ParticlePhysics/hyperfine_structure.ipynb
+++ b/ParticlePhysics/hyperfine_structure.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "79f76459",
+   "id": "9802c63f",
    "metadata": {},
    "source": [
-    "# Hyperfine Structure"
+    "# [Hyperfine Structure](https://study-astrophysics.com/hyperfine-structure/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d4ff7af",
+   "id": "377a9343",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c5bd21",
+   "id": "f5b8c077",
    "metadata": {},
    "source": [
     "## Hyperfine Structure\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3e6e6d1",
+   "id": "b79dbdf5",
    "metadata": {},
    "source": [
     "---"
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1318d2f",
+   "id": "27862446",
    "metadata": {},
    "source": [
     "## Related Topics\n",
     "\n",
     "\n",
-    "### Fine Structure\n",
+    "### [Fine Structure](https://study-astrophysics.com/fine-structure/)\n",
     "\n",
-    "### Lamb Shift"
+    "### [Lamb Shift](https://study-astrophysics.com/lamb-shift/)"
    ]
   }
  ],
