--- a/ParticlePhysics/lamb_shift.ipynb
+++ b/ParticlePhysics/lamb_shift.ipynb
@@ -5,7 +5,7 @@
    "id": "f1c75b29",
    "metadata": {},
    "source": [
-    "# Lamb Shift"
+    "# [Lamb Shift](https://study-astrophysics.com/lamb-shift/)"
    ]
   },
   {
@@ -42,10 +42,11 @@
    "source": [
     "## Related Topics\n",
     "\n",
-    "### Fine Structure\n",
+    "\n",
+    "### [Fine Structure](https://study-astrophysics.com/fine-structure/)\n",
     "\n",
     "\n",
-    "### Hyperfine Structure"
+    "### [Hyperfine Structure](https://study-astrophysics.com/hyperfine-structure/)"
    ]
   }
  ],
