--- a/ParticlePhysics/quantum_number.ipynb
+++ b/ParticlePhysics/quantum_number.ipynb
@@ -5,7 +5,7 @@
    "id": "c6133811",
    "metadata": {},
    "source": [
-    "# Quantum Number"
+    "# [Quantum Number](https://study-astrophysics.com/quantum-number/)"
    ]
   },
   {
@@ -138,7 +138,13 @@
     "## Related Topics\n",
     "\n",
     "\n",
-    "### Atomic Orbital"
+    "### [Atomic Orbital](https://study-astrophysics.com/atomic-orbital/)\n",
+    "\n",
+    "\n",
+    "### [Hund's Rules](https://study-astrophysics.com/hunds-rules/)\n",
+    "\n",
+    "\n",
+    "### [Selection Rule](https://study-astrophysics.com/selection-rule/)"
    ]
   }
  ],
