--- a/ParticlePhysics/selection_rule.ipynb
+++ b/ParticlePhysics/selection_rule.ipynb
@@ -5,7 +5,7 @@
    "id": "6ba7dcc7",
    "metadata": {},
    "source": [
-    "# Selection Rule"
+    "# [Selection Rule](https://study-astrophysics.com/selection-rule/)"
    ]
   },
   {
@@ -33,6 +33,31 @@
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR0177 Problem 084\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f7ca3fc",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b37178b1",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Quantum Number](https://study-astrophysics.com/quantum-number/)\n",
+    "\n",
+    "\n",
+    "### [Atomic Orbital](https://study-astrophysics.com/atomic-orbital/)\n",
+    "\n",
+    "\n",
+    "### [Hund's Rules](https://study-astrophysics.com/hunds-rules/)"
    ]
   }
  ],
