--- a/ParticlePhysics/zeeman_effect.ipynb
+++ b/ParticlePhysics/zeeman_effect.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cea4440f",
+   "id": "228d1444",
    "metadata": {},
    "source": [
-    "# Zeeman Effect"
+    "# [Zeeman Effect](https://study-astrophysics.com/zeeman-effect/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a70c098",
+   "id": "220c8197",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6feff9f6",
+   "id": "ef2b18fe",
    "metadata": {},
    "source": [
     "## Zeeman Effect\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d638a1",
+   "id": "1bb392ec",
    "metadata": {},
    "source": [
     "---"
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df82a16",
+   "id": "cd7e18b9",
    "metadata": {},
    "source": [
     "## Related Topics\n",
     "\n",
     "\n",
-    "### Stark Effect"
+    "### [Stark Effect](https://study-astrophysics.com/stark-effect/)"
    ]
   }
  ],
