--- a/ParticlePhysics/atomic_orbital.ipynb
+++ b/ParticlePhysics/atomic_orbital.ipynb
@@ -5,7 +5,7 @@
    "id": "ac93d11e",
    "metadata": {},
    "source": [
-    "# Atomic Orbital"
+    "# [Atomic Orbital](https://study-astrophysics.com/atomic-orbital/)"
    ]
   },
   {
@@ -56,10 +56,13 @@
     "## Related Topics\n",
     "\n",
     "\n",
-    "### Quantum Numbers\n",
+    "### [Quantum Number](https://study-astrophysics.com/quantum-number/)\n",
     "\n",
     "\n",
-    "### Hund's Rules"
+    "### [Hund's Rules](https://study-astrophysics.com/hunds-rules/)\n",
+    "\n",
+    "\n",
+    "### [Selection Rule](https://study-astrophysics.com/selection-rule/)"
    ]
   }
  ],
