--- a/ParticlePhysics/fine_structure.ipynb
+++ b/ParticlePhysics/fine_structure.ipynb
@@ -5,7 +5,7 @@
    "id": "c43112f3",
    "metadata": {},
    "source": [
-    "# Fine Structure"
+    "# [Fine Structure](https://study-astrophysics.com/fine-structure/)"
    ]
   },
   {
@@ -60,6 +60,28 @@
     "\n",
     "\n",
     "Each energy level for $l > 0$ is split in two by the fine structure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1d3bab2",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ed0bf9c",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Lamb Shift](https://study-astrophysics.com/lamb-shift/)\n",
+    "\n",
+    "\n",
+    "### [Hyperfine Structure](https://study-astrophysics.com/hyperfine-structure/)"
    ]
   }
  ],
