--- a/Relativity/lorentz_invariance.ipynb
+++ b/Relativity/lorentz_invariance.ipynb
@@ -5,7 +5,15 @@
    "id": "eb6db02c",
    "metadata": {},
    "source": [
-    "# Lorentz Invariance"
+    "# [Lorentz Invariance](https://study-astrophysics.com/lorentz-invariance/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "491814cb",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,7 +21,10 @@
    "id": "9cf5bdd1",
    "metadata": {},
    "source": [
-    "$$ \\large \\Delta s^2 = \\Delta x^2 - c^2 \\Delta t^2 = \\Delta x'^2 - c^2 \\Delta t'^2 = \\Delta s'^2 $$\n",
+    "## Lorentz Invariance\n",
+    "\n",
+    "\n",
+    "$$ \\large \\Delta s^2 \\ = \\ \\Delta x^2 - c^2 \\Delta t^2 \\ = \\ \\Delta x'^2 - c^2 \\Delta t'^2 = \\Delta s'^2 $$\n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -26,6 +37,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
