--- a/Relativity/velocity_addition_formula.ipynb
+++ b/Relativity/velocity_addition_formula.ipynb
@@ -5,7 +5,15 @@
    "id": "488afd77",
    "metadata": {},
    "source": [
-    "# Velocity-Addition Formula (Einstein Velocity Relation)"
+    "# [Velocity-Addition Formula (Einstein Velocity Relation)](https://study-astrophysics.com/velocity-addition-formula/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e547e8",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,6 +21,9 @@
    "id": "7316f292",
    "metadata": {},
    "source": [
+    "## Velocity-Addtion Formula\n",
+    "\n",
+    "\n",
     "Add pictures later\n",
     "\n",
     "$$ \\large u = \\frac{v + u'}{1 + \\frac{vu'}{c^2}} $$ \n",
@@ -28,6 +39,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
