add contents, improve visualizations

--- a/ClassicalMechanics/rotation.ipynb
+++ b/ClassicalMechanics/rotation.ipynb
@@ -23,13 +23,17 @@
    "source": [
     "## Centripetal Force\n",
     "\n",
-    "$$ \\large F = ma = \\frac{mv^2}{r^2} = mr\\omega^2 $$\n",
+    "\n",
+    "$$ \\large F \\ = \\ ma \\ = \\ \\frac{mv^2}{r^2} \\ = \\ mr\\omega^2 $$\n",
+    "\n",
     "\n",
     "where \n",
     "\n",
-    "$v = \\omega r$\n",
     "\n",
-    "$\\omega$: angular velocity."
+    "- $v = \\omega r$\n",
+    "\n",
+    "\n",
+    "- $\\omega$: angular velocity."
    ]
   },
   {
@@ -63,11 +67,14 @@
    "source": [
     "## Rotational Kinetic Energy\n",
     "\n",
-    "$$ \\large E_\\text{rot} = \\frac{1}{2} I \\omega^2 $$\n",
+    "\n",
+    "$$ \\large E_\\text{rot} \\ = \\ \\frac{1}{2} I \\omega^2 $$\n",
+    "\n",
     "\n",
     "where \n",
     "\n",
-    "$I$: moment of inertia."
+    "\n",
+    "- $I$: moment of inertia."
    ]
   },
   {
@@ -83,7 +90,31 @@
    "id": "37de3597",
    "metadata": {},
    "source": [
-    "## Moment of Inertia\n"
+    "## Moment of Inertia\n",
+    "\n",
+    "\n",
+    "$$ \\large I \\ = \\ \\int \\rho r^2 dr $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $\\rho$: density of an object\n",
+    "\n",
+    "\n",
+    "- $r$: distance of a given point of the object from its center of mass.\n",
+    "\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "\n",
+    "1. Rod = $ \\frac{1}{12} Ml^2$\n",
+    "\n",
+    "\n",
+    "2. Disc = $ \\frac{1}{2} MR^2$\n",
+    "\n",
+    "\n",
+    "3. Sphere = $ \\frac{2}{5} MR^2$"
    ]
   },
   {
@@ -101,7 +132,9 @@
    "source": [
     "## Parallel Axis Theorem\n",
     "\n",
-    "$$ \\large I = I_{\\text{cm}} + md^2 $$\n",
+    "\n",
+    "$$ \\large I \\ = \\ I_{\\text{cm}} + md^2 $$\n",
+    "\n",
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR0177: Problems 025 and 089"
@@ -122,9 +155,14 @@
    "source": [
     "## Torque\n",
     "\n",
-    "$$ \\large \\vec{\\tau} = I \\vec{\\alpha} = \\vec{r} \\times \\vec{F} $$\n",
     "\n",
-    "where $\\vec{\\alpha}$ is the angular acceleration."
+    "$$ \\large \\vec{\\tau} \\ = \\ I \\vec{\\alpha} \\ = \\ \\vec{r} \\times \\vec{F} $$\n",
+    "\n",
+    "\n",
+    "where \n",
+    "\n",
+    "\n",
+    "- $\\vec{\\alpha}$: angular acceleration"
    ]
   },
   {
@@ -144,7 +182,7 @@
     "\n",
     "Rotation about z-axis of a coordinate system by an angle of $\\theta$.\n",
     "\n",
-    "$$ \\large R_z = \\begin{bmatrix}\n",
+    "$$ \\large R_z \\ = \\ \\begin{bmatrix}\n",
     "\\cos\\theta & -\\sin\\theta & 0 \\\\\n",
     "\\sin\\theta & \\cos\\theta & 0 \\\\\n",
     "0 & 0 & 1\n",
@@ -172,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
