--- a/Relativity/spacetime.ipynb
+++ b/Relativity/spacetime.ipynb
@@ -5,7 +5,15 @@
    "id": "c1618945",
    "metadata": {},
    "source": [
-    "# Spacetime"
+    "# [Spacetime](https://study-astrophysics.com/spacetime/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0420c115",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -16,17 +24,17 @@
     "## Light Corn\n",
     "\n",
     "\n",
-    "### Timelike \n",
+    "### 1. Timelike \n",
     "\n",
     "$$ \\large \\frac{\\Delta x}{\\Delta t} < c $$\n",
     "\n",
     "\n",
-    "### Lightlike \n",
+    "### 2. Lightlike \n",
     "\n",
     "$$ \\large \\frac{\\Delta x}{\\Delta t} = c $$\n",
     "\n",
     "\n",
-    "### Spacelike\n",
+    "### 3. Spacelike\n",
     "\n",
     "$$ \\large \\frac{\\Delta x}{\\Delta t} > c $$\n",
     "\n",
@@ -52,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
