--- a/ClassicalMechanics/collisions.ipynb
+++ b/ClassicalMechanics/collisions.ipynb
@@ -21,15 +21,13 @@
    "id": "1b12c61b",
    "metadata": {},
    "source": [
-    "## Elastic Collision"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5faa3ac",
-   "metadata": {},
-   "source": [
-    "### Total energy & total momentum are conserved."
+    "## Elastic Collision\n",
+    "\n",
+    "\n",
+    "###  Total momentum is conserved.\n",
+    "\n",
+    "\n",
+    "### Total energy is conserved."
    ]
   },
   {
@@ -45,15 +43,12 @@
    "id": "9ce453ff",
    "metadata": {},
    "source": [
-    "## Inelastic Collision"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1073d726",
-   "metadata": {},
-   "source": [
-    "### Only total momentum is conserved, total energy is not conserved."
+    "## Inelastic Collision\n",
+    "\n",
+    "\n",
+    "### Total momentum is conserved.\n",
+    "\n",
+    "### Total energy is <font color='red'>not</font> conserved."
    ]
   }
  ],
@@ -73,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
