--- a/ClassicalMechanics/newtons_law.ipynb
+++ b/ClassicalMechanics/newtons_law.ipynb
@@ -51,7 +51,7 @@
    "id": "58727bc2",
    "metadata": {},
    "source": [
-    "## Newton's Seond Law\n",
+    "## Newton's Seond Law (Force)\n",
     "\n",
     "The rate of change of momentum of a body over time is directly proportional to the force applied, and occurs in the same direction as the applied force.\n",
     "\n",
@@ -111,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
