--- a/ClassicalMechanics/springs.ipynb
+++ b/ClassicalMechanics/springs.ipynb
@@ -41,7 +41,7 @@
    "id": "7808521f",
    "metadata": {},
    "source": [
-    "## Potential Energy\n",
+    "## Spring Potential Energy\n",
     "\n",
     "$$ \\large V \\ = \\ \\frac{1}{2} k x^2 \\ = \\ \\frac{1}{2} m \\omega^2 x^2 $$"
    ]
@@ -128,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
