--- a/QuantumMechanics/compton_scattering.ipynb
+++ b/QuantumMechanics/compton_scattering.ipynb
@@ -5,7 +5,15 @@
    "id": "2121cd6a",
    "metadata": {},
    "source": [
-    "# Compton Scattering"
+    "# [Compton Scattering](https://study-astrophysics.com/compton-scattering/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "235c5da4",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,7 +21,10 @@
    "id": "88d9e53a",
    "metadata": {},
    "source": [
-    "$$ \\large \\lambda' - \\lambda = \\frac{h}{mc} (1 - \\cos \\theta) $$\n",
+    "## Compton Scattering\n",
+    "\n",
+    "\n",
+    "$$ \\large \\lambda' - \\lambda \\ = \\ \\frac{h}{mc} (1 - \\cos \\theta) $$\n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -45,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
