--- a/QuantumMechanics/photoelectric_effect.ipynb
+++ b/QuantumMechanics/photoelectric_effect.ipynb
@@ -5,7 +5,15 @@
    "id": "552b13a6",
    "metadata": {},
    "source": [
-    "# Photoelectric Effect"
+    "# [Photoelectric Effect](https://study-astrophysics.com/photoelectric-effect/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d905a1f",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,7 +21,35 @@
    "id": "eedb3dff",
    "metadata": {},
    "source": [
-    "$$ \\large E = qV = \\frac{1}{2} mv^2 = h\\nu - W $$"
+    "## Photoelectric Effect\n",
+    "\n",
+    "\n",
+    "$$ \\large K_\\text{max} \\ = \\ qV_0 \\ = \\ \\frac{1}{2} mv^2 = h\\nu - W $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e51ac5aa",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e1c09c",
+   "metadata": {},
+   "source": [
+    "## Properties\n",
+    "\n",
+    "\n",
+    "1. Rate of ejection is proportional to intensity of light.\n",
+    "\n",
+    "\n",
+    "2. There is a minimum frequency below which no photoelectric emission occurs.\n",
+    "\n",
+    "\n",
+    "3. The maximum kinetic energy of the electron is independent of intensity."
    ]
   }
  ],
@@ -33,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
