--- a/Relativity/time_dilation.ipynb
+++ b/Relativity/time_dilation.ipynb
@@ -10,13 +10,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47980438",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31e290ea",
    "metadata": {},
    "source": [
-    "$$ \\large t = \\frac{t_0}{\\sqrt{1-(v/c)^2}} $$\n",
+    "## Time Dilation\n",
+    "\n",
+    "\n",
+    "$$ \\large t \\ = \\ \\frac{t_0}{\\sqrt{1-(v/c)^2}} $$\n",
+    "\n",
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR1777 Problem [035](https://study-astrophysics.com/gr1777-035/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feaa69da",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -50,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
