--- a/ClassicalMechanics/position-velocity-acceleration.ipynb
+++ b/ClassicalMechanics/position-velocity-acceleration.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "304d9aae",
+   "id": "4192468b",
    "metadata": {},
    "source": [
-    "# Position, Velocity, & Acceleration"
+    "# [Position, Velocity, & Acceleration](https://study-astrophysics.com/position-velocity-acceleration/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c52a311",
+   "id": "d6899cca",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c5cc18",
+   "id": "22a911c0",
    "metadata": {},
    "source": [
     "## Relationship between Position, Velocity, and Acceleration\n",
