--- a/Relativity/lorentz_transformation.ipynb
+++ b/Relativity/lorentz_transformation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b08a73fd",
+   "id": "28ec87e1",
    "metadata": {},
    "source": [
-    "# Lorentz Transformation"
+    "# [Lorentz Transformation](https://study-astrophysics.com/lorentz-transformation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a317d6ba",
+   "id": "37e4288e",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ebcd2b",
+   "id": "15eb6d87",
    "metadata": {},
    "source": [
     "## Lorentz Transformation\n",
@@ -29,7 +29,7 @@
     "\n",
     "The most common form of the transformation, parametrized by the real constant $v$, representing a velocity confined to the $x$-direction, is\n",
     "\n",
-    "$$ \\large \\begin{align} \n",
+    "$$ \\large \\begin{align*} \n",
     "t' &\\ = \\ \\gamma \\left( t - \\frac{vx}{c^2} \\right) \\\\ \n",
     "\\\\\n",
     "x' &\\ = \\ \\gamma (x - vt) \\\\\n",
@@ -37,7 +37,7 @@
     "y' &\\ = \\ y \\\\\n",
     "\\\\\n",
     "z' &\\ = \\ z\n",
-    "\\end{align} $$\n",
+    "\\end{align*} $$\n",
     "\n",
     "\n",
     "where\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ee2ca91",
+   "id": "10f0940e",
    "metadata": {},
    "source": [
     "---"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b113ecca",
+   "id": "31aaac8f",
    "metadata": {},
    "source": [
     "## Related Topics\n",
