add contents, links

--- a/ClassicalMechanics/keplers_law.ipynb
+++ b/ClassicalMechanics/keplers_law.ipynb
@@ -21,15 +21,13 @@
    "id": "41352836",
    "metadata": {},
    "source": [
-    "## First Law"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2120bd8a",
-   "metadata": {},
-   "source": [
-    "The orbit of every planet is an **ellipse** with the Sun at one of the two foci."
+    "## First Law\n",
+    "\n",
+    "\n",
+    "The orbit of every planet is an **ellipse** with the Sun at one of the two foci.\n",
+    "\n",
+    "\n",
+    "$$ \\large r(\\theta) \\ = \\ \\frac{a(1-e^2)}{1+ e\\cos\\theta} $$"
    ]
   },
   {
@@ -45,15 +43,19 @@
    "id": "f91751dd",
    "metadata": {},
    "source": [
-    "## Second Law"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9406e5ad",
-   "metadata": {},
-   "source": [
-    "A line joining a planet and the Sun sweeps out equal areas during equal intervals of time."
+    "## Second Law\n",
+    "\n",
+    "\n",
+    "A line joining a planet and the Sun sweeps out equal areas during equal intervals of time.\n",
+    "\n",
+    "\n",
+    "$$ \\large \\frac{d}{dt} \\left( \\frac{1}{2} r^2 \\dot{\\theta} \\right) \\ = \\ 0 $$\n",
+    "\n",
+    "\n",
+    "or,\n",
+    "\n",
+    "\n",
+    "$$ \\large \\frac{dA}{dt} \\ = \\ \\frac{1}{2} r^2 \\dot{\\theta} \\ = \\ \\text{constant} $$"
    ]
   },
   {
@@ -72,7 +74,11 @@
     "## Third Law\n",
     "\n",
     "\n",
+    "The square of the orbital period of a planet is directly proportional to the cube of the semi-major axis of its orbit.\n",
+    "\n",
+    "\n",
     "$$ \\large T = 2\\pi \\sqrt{\\frac{a^3}{GM}} $$\n",
+    "\n",
     "\n",
     "$$ \\large T^2 \\propto a^3 $$"
    ]
