--- a/FluidMechanics/bernoullis_principle.ipynb
+++ b/FluidMechanics/bernoullis_principle.ipynb
@@ -2,12 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7f0e65ca",
+   "metadata": {},
+   "source": [
+    "# [Bernoulli's Principle](https://study-astrophysics.com/bernoullis-principle/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dd28246",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4fa3b658",
    "metadata": {},
    "source": [
     "## Bernoulli's Principle\n",
     "\n",
-    "$$ \\large P_1 + \\frac{1}{2}\\rho v_1^2 + \\rho g h = P_2 + \\frac{1}{2}\\rho v_2^2 + \\rho g h $$"
+    "\n",
+    "$$ \\large P_1 + \\frac{1}{2}\\rho v_1^2 + \\rho g h \\ = \\ P_2 + \\frac{1}{2}\\rho v_2^2 + \\rho g h $$"
    ]
   }
  ],
@@ -27,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
