--- a/FluidMechanics/buoyancy.ipynb
+++ b/FluidMechanics/buoyancy.ipynb
@@ -2,22 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fd35074e",
+   "metadata": {},
+   "source": [
+    "# [Buoyancy](https://study-astrophysics.com/buoyancy/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52e47ca9",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c0289655",
    "metadata": {},
    "source": [
     "## Buoyancy\n",
     "\n",
-    "$$\\large \\vec{F_b} = - \\rho g V $$\n",
+    "\n",
+    "$$\\large \\vec{F_b} \\ = \\ - \\rho g V $$\n",
+    "\n",
     "\n",
     "where \n",
     "\n",
-    "$\\vec{F_b}$: buoyant force\n",
     "\n",
-    "$\\rho$: mass density of the fluid\n",
+    "- $\\vec{F_b}$: buoyant force\n",
     "\n",
-    "$g$: gravitational acceleration\n",
     "\n",
-    "$V$: volume of the body.\n",
+    "- $\\rho$: mass density of the fluid\n",
+    "\n",
+    "\n",
+    "- $g$: gravitational acceleration\n",
+    "\n",
+    "\n",
+    "- $V$: volume of the body.\n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -43,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
